NOCC 0.9.5	??   ??, 2001

	* Added tooltips to the sort column icons in the messageview.
	* Added a Theme tips section to the README.
	* Made page header/footer theme-customisable.
	* Added 'Select All' (patch #471732).
	* Added some elements in the portuguese (pt.php) translation
	  from  Jorge Silva <jorge.silva@ciberlink.pt>
	* Fixed a problem with IE 6 (everything was centered)
	* Fixed a bug which prevented to send email on RH7 with RPM version
	  of PHP (bug #430069).
	* Fixed long list of addresses not wrapped (bug #440905).
	* In the send form, the user can now change his email address.
	* Added Norwegian (Bokmal and Nynorsk), Turkish and Finnish
	  translations.
	* Fixed a problem with some Linux installation which displayed
	  an 'invalid range' error message (bug #432724).
	* Fixed a problem which allowed people to send an e-mail without
	  logging in a valid mail account (bug #440319).
	* Fixed a problem with range when trying to get messages 
	  charset (bug #432724).
	* Fixed a problem which prevented to add attachments when
	  PHP was running in safe mode.
	* Correct a problem with attachments when a Content-ID was
	  specified by the mailer.
	* Return Path is now set correctly when not using SMTP server.
	* Added support for priority when sending messages.
	* Removed warnings when using E_ALL in error reporting.

NOCC 0.9.4	June 02, 2001

	* Improved mailto: parsing with text/plain messages.
	* Speed up a bit by using ' instead of " for strings (faster parsing).
	* Fixed Eudora attachments' name field in lowercase (patch from William
	  Emmanuel S. Yu).
	* Fixed configuring protocol layout when connecting to an imap server.
	* Fixed a security issue which allowed people to send critical system
	  files (attachments array is now kept in session data and several
	  checks are performed).
	* Fixed empty IP address in send.php on Win32 (bug #415180).
	* Fixed sending corrupted attachments when running on Win32
	  (bug #414497).